# rust_rest_api

./: Cargo.toml
src/: auth_middleware.rs  main.rs  routes.rs  types.rs
