[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.6.0"
base64 = "0.13.0"
futures-util = "0.3.21"
serde = { version = "1.0", features = ["derive"] }